--- a/app/views/quizes/index.html.erb
+++ b/app/views/quizes/index.html.erb
@@ -1,2 +1,2 @@
-<h1>FHP Week 2</h1>
-<h2>Quiz 1: I prove I can <b><i><span style="color:Indigo">change text color.</span></i></b></h2>
+<h1>FHP Quizes:</h1>
+<h2><%= link_to 'Please click here for Quiz1', quiz1_path %></h2>
