--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -2,10 +2,30 @@
 
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,400italic,500,500italic);
 
+@-ms-viewport {
+  width: device-width;
+}
+
+.clear {
+	clear:both;
+}
+.logo {
+	position: relative;
+	border-radius: 100%;
+	height: 112px;
+	width: 112px;
+}
+
 h1 {
 	font-family: 'Fira Sans', sans-serif;
 }
 
 h2 {
 	font-family: 'Fira Sans', sans-serif;
+}
+
+body {
+		/* Trebuchet-based sans serif stack */
+	font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+	font-size:14px;
 }
