--- a/app/views/quizes/quiz1.html.erb
+++ b/app/views/quizes/quiz1.html.erb
@@ -1,15 +1,17 @@
 <!-- Quiz1: 20150902 ~AMP -->
-<h1>FHP Week 2</h1>
-<h2>Quiz 1: I prove I can <b><i><span style="color:Indigo">change text color.</span></i></b></h2>
-<br />
-<p>Here is my content, just something I had lying around that is adorable:</p>
-<br />
+<br class="clear" />
 
-<div class="col-xs-12">
-	<%= image_tag 'andthenthereswillsmith.jpg', class: 'img-responsive' %>
+<div class="col-xs-11 mainbody">
+	<h1>FHP Week 2</h1>
+	<h2>Quiz 1: I prove I can <b><i><span style="color:Indigo">change text color.</span></i></b></h2>
+	<br />
+	<p>Here is my content, just something I had lying around that is adorable:</p>
+	<br />
+	<div class="col-xs-12">
+		<%= image_tag 'andthenthereswillsmith.jpg', class: 'img-responsive' %>
+	</div>
+
+	<br class="clear" />
+	<br />
+	<%= link_to 'Home', root_path %>
 </div>
-
-<br />
-<br />
-<br />
-<%= link_to 'Home', root_path %>
