--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
 </head>
 <body>
 	<header>
-		<div classs="col-xs-12">
-			<%= link_to root_path image_tag 'sAMPlogo.png', class: 'logo' do %>
-			<% end %>
+		<div class="col-xs-2 amplogo">
+			<%= link_to(image_tag("sAMPlogo.png"), root_path) %>
+		</div>
+		<div class="col-xs-10 notes">
+				By all that is unholy this REALLY took me down the rabbit hole! All for a typo! Good learning experience...
 		</div>
 	</header>
 
