--- a/app/views/quizes/index.html.erb
+++ b/app/views/quizes/index.html.erb
@@ -1,4 +1,4 @@
 <div class="col-xs-11 mainbody">
-	<h1>FHP Quizes:</h1>
+	<h1>FHP Quizzes:</h1>
 	<h2>Please click here for: <%= link_to 'Quiz1', quiz1_path %></h2>
 </div>
