stupid undefined method error making my life hell with submission form on same page as display data. about to move it to footer of app.html.erb. ~AMP

--- a/app/views/quizes/index.html.erb
+++ b/app/views/quizes/index.html.erb
@@ -1,4 +1,5 @@
 <div class="col-xs-11 mainbody">
 	<h1>FHP Quizzes:</h1>
 	<h2>Please click here for: <%= link_to 'Quiz1', quiz1_path %></h2>
+	<h2>Please click here for: <%= link_to 'Quiz2', quiz2_path %></h2>
 </div>
