--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -17,6 +17,17 @@
 	float: left;
 }
 
+.dispbox {
+	box-shadow: 1px 1px 6px rgba(75, 0, 130, 0.75);
+	background-color: rgba(227,227,231,0.3);
+	border: 1px solid #ccc;
+	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+	border-radius: 6px;
+	margin-top: 10px;
+	margin-bottom: 15px;
+	padding: 15px;
+}
+
 .notes {
 	color: Indigo;
 	padding: 20px;
